Finished all html and added all images and icons.

--- a/index.html
+++ b/index.html
@@ -29,35 +29,109 @@
         <button type="button" class="btn btn--start">Get started</button>
         <a type="button" class="link__video"><img src="images/button.png" class="img__video"></a>
       </div>
-    <img class="header__image" scr="images/jump-image.png">
+    <img class="header__image" src="images/jump-image.png">
   </header>
   <main>
     <div class="tool__section">
-      <h2>We design tools to unveil your superpowers</h2>
+      <h2 class="heading">We design tools to unveil your superpowers</h2>
       <div class="icon__section">
         <div>
-          <img class="icon" scr="images/pointer-icon.png">
+          <img class="icon" src="images/pointer-icon.png">
           <h4>First click tests</h4>
-          <p class="icon__text">While most people enjoy casino gambling,</p>
+          <p class="text">While most people enjoy casino gambling,</p>
         </div>
         <div>
-          <img class="icon" scr ="images/design-icon.png">
+          <img class="icon" src ="images/design-icon.png">
           <h4>Design surveys</h4>
-          <p class="icon__text">Sports betting, lottery and bingo playing for the fun</p>
+          <p class="text">Sports betting, lottery and bingo playing for the fun</p>
         </div>
         <div>
-          <img class="icon" scr="images/heart-icon.png">
+          <img class="icon" src="images/heart-icon.png">
           <h4>Preference tests</h4>
-          <p class="icon__text">The Myspace page defines the individual.</p>
+          <p class="text">The Myspace page defines the individual.</p>
         </div>
         <div>
-          <img class="icon" scr="images/time-icon.png">
+          <img class="icon" src="images/time-icon.png">
           <h4>Five second tests</h4>
-          <p class="icon__text">Personal choices and the overall personality of the person. </p>
+          <p class="text">Personal choices and the overall personality of the person. </p>
         </div>
       </div>
       <button type="button" class="btn--start">SIGN UP NOW</button>
     </div>
+
+    <div class="validation-section">
+      <div>
+        <p class="text text--info">Effortless Validation for</p>
+        <h2 class="heading heading--two">Design Professionals</h2>
+        <p class="text text--under">The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p>
+        <p class="text text--heading">Accessory makers</p>
+        <p class="text text--under">While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
+        <p class="text text--heading">Alterationists</p>
+        <p class="text text--under">If you are looking for a new way to promote your business that won’t cost you more money, </p>
+        <p class="text text--heading">Custom Design designers</p>
+        <p class="text text--under">If you are looking for a new way to promote your business that won’t cost you more money, </p>
+      </div>
+      <img src="images/pointing.png" class="img__pointing">
+    </div>
+
+    <div class="validation-section">
+      <img src="images/computer.png" class="img__computer">
+      <div>
+        <p class="text text--info">Easier decision making for</p>
+        <h2 class="heading heading--two">Product Managers</h2>
+        <p class="text text--under">The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person.</p>
+        <div>
+          <img src="images/check-icon.png" class="img__icon">
+          <p class="text text--under">Never worry about overpaying for your energy again.</p>
+        </div>
+        <div>
+          <img src="images/check-icon.png" class="img__icon">
+          <p class="text text--under">We will only switch you to energy companies that we trust and will treat you right</p>
+        </div>
+        <div>
+          <img src="images/check-icon.png" class="img__icon">
+          <p class="text text--under">We track the markets daily and know where the savings are.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="validation-section">
+      <div>
+        <p class="text text--info">Effortless Validation for</p>
+        <h2 class="heading heading--two">Design Professionals</h2>
+        <p class="text text--under">Few would argue that, despite the advancements of feminism over the past three decades, women still face a double standard when it comes to their behavior.</p>
+        <p class="text text--heading">Accessory makers</p>
+        <p class="text text--under">While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
+        <p class="text text--heading">Alterationists</p>
+        <p class="text text--under">If you are looking for a new way to promote your business that won’t cost you more money, </p>
+        <p class="text text--heading">Custom Design designers</p>
+        <p class="text text--under">If you are looking for a new way to promote your business that won’t cost you more money, </p>
+      </div>
+      <img src="images/man-pointing.png" class="img__pointing">
+    </div>
+
+    <footer>
+      <img src="images/logo2.png" class="logo__two">
+      <div class="list__div">
+        <ul class="list">
+          <li>About Us</li>
+          <li>Blog</li>
+          <li>Contact</li>
+          <li>FAQ</li>
+        </ul>
+        <ul class="list">
+          <li>Disclaimer</li>
+          <li>Financing</li>
+          <li>Privacy Policy</li>
+          <li>Terms of Service</li>
+        </ul>
+      </div>
+      <div class="input__div">
+        <input type="text" />
+        <button class="btn btn--signupnow">Sign up Now</button>
+      </div>
+    </footer>
+
   </main>
 </body>
 </html>
