Fixed the positions of the images and text

--- a/index.html
+++ b/index.html
@@ -23,13 +23,17 @@
     </div>
   </nav>
   <header>
+    <div class="header__text__section">
       <h1>The Design Thinking superpowers</h1>
       <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
       <div class="header__btn__section">
         <button type="button" class="btn btn--start">Get started</button>
         <a type="button" class="link__video"><img src="images/button.png" class="img__video"></a>
       </div>
-    <img class="header__image" src="images/jump-image.png">
+    </div>
+    <div class="image__section">
+      <img class="header__image" src="images/jump-image.png">
+    </div>
   </header>
   <main>
     <div class="tool__section">
@@ -59,8 +63,8 @@
       <button type="button" class="btn--start">SIGN UP NOW</button>
     </div>
 
-    <div class="validation-section">
-      <div>
+    <div class="main__info__section">
+      <div class="main__text__section">
         <p class="text text--info">Effortless Validation for</p>
         <h2 class="heading heading--two">Design Professionals</h2>
         <p class="text text--under">The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p>
@@ -74,31 +78,31 @@
       <img src="images/pointing.png" class="img__pointing">
     </div>
 
-    <div class="validation-section">
+    <div class="main__info__section">
       <img src="images/computer.png" class="img__computer">
-      <div>
+      <div class="main__text__section--two">
         <p class="text text--info">Easier decision making for</p>
         <h2 class="heading heading--two">Product Managers</h2>
         <p class="text text--under">The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person.</p>
-        <div>
+        <div class="icon__list">
           <img src="images/check-icon.png" class="img__icon">
-          <p class="text text--under">Never worry about overpaying for your energy again.</p>
+          <p class="text text--icon">Never worry about overpaying for your energy again.</p>
         </div>
-        <div>
+        <div class="icon__list">
           <img src="images/check-icon.png" class="img__icon">
-          <p class="text text--under">We will only switch you to energy companies that we trust and will treat you right</p>
+          <p class="text text--icon">We will only switch you to energy companies that we trust and will treat you right</p>
         </div>
-        <div>
+        <div class="icon__list">
           <img src="images/check-icon.png" class="img__icon">
-          <p class="text text--under">We track the markets daily and know where the savings are.</p>
+          <p class="text text--icon">We track the markets daily and know where the savings are.</p>
         </div>
       </div>
     </div>
 
-    <div class="validation-section">
-      <div>
-        <p class="text text--info">Effortless Validation for</p>
-        <h2 class="heading heading--two">Design Professionals</h2>
+    <div class="main__info__section">
+      <div class="main__text__section">
+        <p class="text text--info">Optimisation for</p>
+        <h2 class="heading heading--two">Marketers</h2>
         <p class="text text--under">Few would argue that, despite the advancements of feminism over the past three decades, women still face a double standard when it comes to their behavior.</p>
         <p class="text text--heading">Accessory makers</p>
         <p class="text text--under">While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
@@ -107,7 +111,7 @@
         <p class="text text--heading">Custom Design designers</p>
         <p class="text text--under">If you are looking for a new way to promote your business that won’t cost you more money, </p>
       </div>
-      <img src="images/man-pointing.png" class="img__pointing">
+      <img src="images/man-pointing.png" class="img__pointing__man">
     </div>
 
     <footer>
