Fixed position in footer, added alt and title to every image. Changed som margins

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <nav class="navigation">
-    <img src="images/logo.png" class="logo">
+    <img src="images/logo.png" alt="logo" title="logo" class="logo">
     <ul>
       <li>Product</li>
       <li>Costumers</li>
@@ -28,39 +28,39 @@
       <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
       <div class="header__btn__section">
         <button type="button" class="btn btn--start">Get started</button>
-        <a type="button" class="link__video"><img src="images/button.png" class="img__video"></a>
+        <a type="button" class="link__video"><img src="images/button.png" alt="play-button" title="play video button" class="img__video"></a>
       </div>
     </div>
     <div class="image__section">
-      <img class="header__image" src="images/jump-image.png">
+      <img class="header__image" src="images/jump-image.png" alt="persons-jumping" title="Persons jumping">
     </div>
   </header>
   <main>
     <div class="tool__section">
       <h2 class="heading">We design tools to unveil your superpowers</h2>
       <div class="icon__section">
-        <div>
-          <img class="icon" src="images/pointer-icon.png">
+        <div class="tool__div">
+          <img class="icon" src="images/pointer-icon.png" alt="person-pointing" title="Person pointing and talking">
           <h4>First click tests</h4>
           <p class="text">While most people enjoy casino gambling,</p>
         </div>
-        <div>
-          <img class="icon" src ="images/design-icon.png">
+        <div class="tool__div">
+          <img class="icon" src ="images/design-icon.png" alt="desing-icon" title="design icon">
           <h4>Design surveys</h4>
           <p class="text">Sports betting, lottery and bingo playing for the fun</p>
         </div>
-        <div>
-          <img class="icon" src="images/heart-icon.png">
+        <div class="tool__div">
+          <img class="icon" src="images/heart-icon.png" alt="heart-icon" title="heart icon">
           <h4>Preference tests</h4>
           <p class="text">The Myspace page defines the individual.</p>
         </div>
-        <div>
-          <img class="icon" src="images/time-icon.png">
+        <div class="tool__div">
+          <img class="icon" src="images/time-icon.png" alt="hourglass-icon" title="hour glass icon">
           <h4>Five second tests</h4>
           <p class="text">Personal choices and the overall personality of the person. </p>
         </div>
       </div>
-      <button type="button" class="btn--start">SIGN UP NOW</button>
+      <button type="button" class="btn btn--start">SIGN UP NOW</button>
     </div>
 
     <div class="main__info__section">
@@ -75,26 +75,28 @@
         <p class="text text--heading">Custom Design designers</p>
         <p class="text text--under">If you are looking for a new way to promote your business that won’t cost you more money, </p>
       </div>
-      <img src="images/pointing.png" class="img__pointing">
+      <img src="images/pointing.png" class="img__pointing" alt="person-pointing" title="Person pointing and talking">
     </div>
 
     <div class="main__info__section">
-      <img src="images/computer.png" class="img__computer">
+      <img src="images/computer.png" class="img__computer" alt="person-and-computer" title="Person with computer">
       <div class="main__text__section--two">
         <p class="text text--info">Easier decision making for</p>
         <h2 class="heading heading--two">Product Managers</h2>
         <p class="text text--under">The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person.</p>
-        <div class="icon__list">
-          <img src="images/check-icon.png" class="img__icon">
-          <p class="text text--icon">Never worry about overpaying for your energy again.</p>
-        </div>
-        <div class="icon__list">
-          <img src="images/check-icon.png" class="img__icon">
-          <p class="text text--icon">We will only switch you to energy companies that we trust and will treat you right</p>
-        </div>
-        <div class="icon__list">
-          <img src="images/check-icon.png" class="img__icon">
-          <p class="text text--icon">We track the markets daily and know where the savings are.</p>
+        <div class="icon__list__section">
+          <div class="icon__list">
+            <img src="images/check-icon.png" class="img__icon" alt="check-image" title="check image">
+            <p class="text text--icon">Never worry about overpaying for your energy again.</p>
+          </div>
+          <div class="icon__list">
+            <img src="images/check-icon.png" class="img__icon" alt="check-image" title="check image">
+            <p class="text text--icon">We will only switch you to energy companies that we trust and will treat you right</p>
+          </div>
+          <div class="icon__list">
+            <img src="images/check-icon.png" class="img__icon" alt="check-image" title="check image">
+            <p class="text text--icon">We track the markets daily and know where the savings are.</p>
+          </div>
         </div>
       </div>
     </div>
@@ -111,11 +113,11 @@
         <p class="text text--heading">Custom Design designers</p>
         <p class="text text--under">If you are looking for a new way to promote your business that won’t cost you more money, </p>
       </div>
-      <img src="images/man-pointing.png" class="img__pointing__man">
+      <img src="images/man-pointing.png" class="img__pointing__man" alt="person-pointing-on-screen" title="person ponting at a screen">
     </div>
 
     <footer>
-      <img src="images/logo2.png" class="logo__two">
+      <img src="images/logo2.png" class="logo__two" alt="logo" title="logo">
       <div class="list__div">
         <ul class="list">
           <li>About Us</li>
@@ -123,7 +125,7 @@
           <li>Contact</li>
           <li>FAQ</li>
         </ul>
-        <ul class="list">
+        <ul class="list list--right">
           <li>Disclaimer</li>
           <li>Financing</li>
           <li>Privacy Policy</li>
